Update MasterService.java